[package]
name = "gluon-memleak"
version = "0.1.0"
authors = ["Hans-Christian Esperer <hc@hcesperer.org>"]
edition = "2018"

[dependencies]
gluon = { path = "./gluon", features = ["serialization"] }
gluon_codegen = { path = "./gluon/codegen" }
gluon_vm = { path = "./gluon/vm", features = ["serialization"] }
